# encoder-decoder

./: CMakeLists.txt  main.cpp  test.txt
inc/: Cryption.cpp  IO.cpp  ProcessManagement.cpp  ReadEnv.cpp
src/: Cryption.hpp  IO.hpp  ProcessManagement.hpp  Task.hpp
